--- a/src/app/components/users/user-form.component.html
+++ b/src/app/components/users/user-form.component.html
@@ -132,10 +132,10 @@
                       <div *ngFor="let permission of category.value; let i = index; trackBy: trackByPermission"
                         class="permission-item">
                         <div class="custom-control custom-checkbox">
-                          <input type="checkbox" class="custom-control-input" [id]="'perm-' + i"
+                          <input type="checkbox" class="custom-control-input" [id]="'perm-' + permission"
                             [checked]="isPermissionChecked(availablePermissions.indexOf(permission))"
                             (change)="togglePermission(availablePermissions.indexOf(permission))">
-                          <label class="custom-control-label" [for]="'perm-' + i">
+                          <label class="custom-control-label" [for]="'perm-' + permission">
                             {{ getPermissionDisplayName(permission) }}
                           </label>
                         </div>
